# auto-updater

./: .gitignore  Cargo.toml  README.md  build.rs
.github/codeql/: codeql-config.yaml
.github/workflows/: pr-build.yaml
completions/: _auto-updater  auto-updater.bash
src/: add.rs  cli.yml  info.rs  list.rs  main.rs  settings.rs  update.rs  utils.rs
src/args/: add.rs  info.rs  list.rs  mod.rs  remove.rs  upgrade.rs
