[package]
name = "auto-updater"
version = "0.2.0"
authors = ["Tom McKernan <tmeaglei@gmail.com>"]
edition = "2021"

build = "build.rs"

[build-dependencies]
clap = {version = "~4.1.8", features = ["derive", "color"]}
clap_complete = "4.1.4"
clap-verbosity-flag = "2.0.0"
chrono = {version = "0.4.24", features = ["serde"]}
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }

[dependencies]
clap = {version = "~4.1.8", features = ["derive", "color"]}
json = "0.12.1"
chrono = {version = "0.4.24", features = ["serde"]}
clap-verbosity-flag = "2.0.0"
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }
color-eyre = "0.6.2"
