[package]
name = "auto-updater"
version = "0.2.1"
authors = ["Tom McKernan <tmeaglei@gmail.com>"]
edition = "2021"

build = "build.rs"

[build-dependencies]
clap = {version = "~4.5.54", features = ["derive", "color"]}
clap_complete = "4.5.58"
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
color-eyre = "0.6.5"

[dependencies]
clap = {version = "~4.5.54", features = ["derive", "color"]}
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
color-eyre = "0.6.5"
